--- a/contact.html
+++ b/contact.html
@@ -31,9 +31,19 @@
     </div>
   </nav>
 
-  <!-- contact form -->
+  
   <div class = "container">
     <h1>Contact</h1>
+    <!-- rework this -->
+    <div>
+        <p>Contact me!</p>
+        <p>caitlinrcrews@gmail.com</p>
+        <p>(239) 872-8129</p>
+        <p>Github: https://github.com/caitlincrews08</p>
+        <p>LinkedIn: </p>
+    </div>
+
+    <!-- contact form -->
     <form>
       <div class="form-group">
         <label for="formGroupName">Name</label>
