--- a/index.html
+++ b/index.html
@@ -37,11 +37,14 @@
     <h1>About Me</h1>
 
     <div class="media">
-      <img src="images/gradpic.jpg" class="mr-3" alt="Graduation picture with sister" width="20%">
+      <img src="./Assets/Images/gradpic.jpg" class="mr-3" alt="Graduation picture with sister" label="Graduation with my sister" width="20%">
       <div class="media-body">
-        My name is Caitlin Crews and I am a recent graduate from the University of Central Florida. I achieved a Bachelor's of Science in Undergraduate Studies with a focus on Life/Biomedical Sciences and Physical Sciences with a minor
-        in Health Sciences. As a post graduate, I have begun this coding boot camp as a way to get into the tech field. I particularly enjoy working with JavaScript and CSS so far. I hope to one day find a position working as a web developer.<br>
-        Outside of school, my interests include reading, yoga, and spending time with family and friends. On this website, you will find a portfolio of my coding achievements thus far and ways to contact me.
+        <h3>Hey!</h3>
+        <h4>I'm Caitlin, welcome to my site.</h4>
+        <p>I'm a recent graduate from the University of Central Florida. I achieved a Bachelor's of Science in Undergraduate Studies with a focus on Life/Biomedical Sciences and Physical Sciences with a minor
+        in Health Sciences.</p>
+        <p>I'm currently enrolled in the UCF Coding Bootcamp with hopes of becoming a freelance full-stack web developer. Check out my portolio for some of my work so far.</p>
+        <p>Outside of school, my interests include reading and yoga.</p>
       </div>
     </div>
 
