--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>About</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+  <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
@@ -44,7 +45,7 @@
         <p>I'm a recent graduate from the University of Central Florida. I achieved a Bachelor's of Science in Undergraduate Studies with a focus on Life/Biomedical Sciences and Physical Sciences with a minor
         in Health Sciences.</p>
         <p>I'm currently enrolled in the UCF Coding Bootcamp with hopes of becoming a freelance full-stack web developer. Check out my portolio for some of my work so far.</p>
-        <p>Outside of school, my interests include reading and yoga.</p>
+        <p>Outside of school, my interests include reading (lately I'm pretty into the Classics) and yoga.</p>
       </div>
     </div>
 
