--- a/portfolio.html
+++ b/portfolio.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Portfolio</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+  <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
@@ -44,24 +45,24 @@
       </ol>
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="..." class="d-block w-100" alt="...">
-          <div class="carousel-caption d-none d-md-block">
-            <h5>Traveler's Tip 5ive</h5>
-            <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
+          <img src="./Assets/Images/travelersTop5.png" link="" class="d-block w-100" alt="Group project screenshot">
+          <div class="carousel-caption d-none d-md-block caption">
+            <h5>Traveler's Tip Five</h5>
+            <p>First group project. Our app utilizes Yelp and Google APIs to help travelers find fun and highly rated establishments in a given city.</p>
           </div>
         </div>
         <div class="carousel-item">
-          <img src="..." class="d-block w-100" alt="...">
-          <div class="carousel-caption d-none d-md-block">
+          <img src="./Assets/Images/weatherDash.png" class="d-block w-100" alt="weather dashboard screenshot">
+          <div class="carousel-caption d-none d-md-block caption">
             <h5>Weather Dashboard</h5>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            <p>This site takes in a user input for a city and displays todays weather and a five day forecase.</p>
           </div>
         </div>
         <div class="carousel-item">
-          <img src="..." class="d-block w-100" alt="...">
-          <div class="carousel-caption d-none d-md-block">
+          <img src="./Assets/Images/codingQ.png" class="d-block w-100" alt="coding quiz screenshot">
+          <div class="carousel-caption d-none d-md-block caption">
             <h5>Coding Quiz</h5>
-            <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
+            <p>Test your coding knowledge!</p>
           </div>
         </div>
       </div>
