--- a/portfolio.html
+++ b/portfolio.html
@@ -47,7 +47,7 @@
         <div class="carousel-item active">
           <img src="./Assets/Images/travelersTop5.png" link="" class="d-block w-100" alt="Group project screenshot">
           <div class="carousel-caption d-none d-md-block caption">
-            <h5>Traveler's Tip Five</h5>
+            <h5>Traveler's Top Five</h5>
             <p>First group project. Our app utilizes Yelp and Google APIs to help travelers find fun and highly rated establishments in a given city.</p>
           </div>
         </div>
