--- a/portfolio.html
+++ b/portfolio.html
@@ -55,7 +55,7 @@
           <img src="./Assets/Images/weatherDash.png" class="d-block w-100" alt="weather dashboard screenshot">
           <div class="carousel-caption d-none d-md-block caption">
             <h5>Weather Dashboard</h5>
-            <p>This site takes in a user input for a city and displays todays weather and a five day forecase.</p>
+            <p>This site takes in a user input for a city and displays todays weather and a five day forecast.</p>
           </div>
         </div>
         <div class="carousel-item">
