updated contact card

--- a/contact.html
+++ b/contact.html
@@ -36,12 +36,16 @@
   <div class = "container">
     <h1>Contact</h1>
     <!-- rework this -->
-    <div>
-        <p>Contact me!</p>
-        <p>caitlinrcrews@gmail.com</p>
-        <p>(239) 872-8129</p>
-        <p>Github: https://github.com/caitlincrews08</p>
-        <p>LinkedIn: </p>
+    <div class="card" style="width: 18rem;">
+      <div class="card-body">
+        <h5 class="card-title">Contact Me!</h5>
+        <!-- <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6> -->
+        <p class="card-text">Phone: (239) 872-8129</p>
+        <p class="card-text">Email: caitlinrcrews@gmail.com</p>
+        <a href="https://github.com/caitlincrews08" class="card-link">GitHub</a>
+        <a href="https://www.linkedin.com/in/caitlin-crews-24b32b1b7/" class="card-link">LinkedIn</a>
+        <a href="" class="card-link">Resume</a>
+      </div>
     </div>
 
     <!-- contact form -->
