--- a/contact.html
+++ b/contact.html
@@ -44,12 +44,12 @@
         <p class="card-text">Email: caitlinrcrews@gmail.com</p>
         <a href="https://github.com/caitlincrews08" class="card-link">GitHub</a>
         <a href="https://www.linkedin.com/in/caitlin-crews-24b32b1b7/" class="card-link">LinkedIn</a>
-        <a href="" class="card-link">Resume</a>
+        <a href="./Assets/Caitlin's Coding Resume 2020 copy.pdf" download name="caitlin's resume" class="card-link">Resume</a>
       </div>
     </div>
 
     <!-- contact form -->
-    <form>
+    <!-- <form>
       <div class="form-group">
         <label for="formGroupName">Name</label>
         <input type="text" class="form-control" id="formGroupName" placeholder="Name">
@@ -63,7 +63,7 @@
         <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" placeholder="Message"></textarea>
       </div>
       <button type="submit" class="btn btn-primary">Submit</button>
-    </form>
+    </form> -->
   </div>
   
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
